@@ -192,10 +192,11 @@ int main(int argc, char** argv)
     // Init IME effect windows only
     ImGui_ImplSDL2_InitIme();
 
-    int window_flags = SDL_WINDOW_VULKAN | SDL_WINDOW_ALLOW_HIGHDPI;
+    int window_flags = SDL_WINDOW_VULKAN | SDL_WINDOW_ALLOW_HIGHDPI | SDL_WINDOW_INPUT_FOCUS;
     if (property.resizable) window_flags |= SDL_WINDOW_RESIZABLE;
     if (property.full_size)
     {
+#if defined(__APPLE__) || defined(_WIN32)
         SDL_DisplayMode DM;
         SDL_GetCurrentDisplayMode(0, &DM);
         SDL_Rect r;
@@ -204,6 +205,7 @@ int main(int argc, char** argv)
         property.pos_y = r.y;
         property.width = r.w > 0 ? r.w : DM.w;
         property.height = r.h > 0 ? r.h : DM.h;
+#endif
         property.center = false;
         window_flags |= SDL_WINDOW_BORDERLESS | SDL_WINDOW_MAXIMIZED;
     }
